add css, header security logo compiance

--- a/templates/views/compliance.hbs
+++ b/templates/views/compliance.hbs
@@ -84,7 +84,7 @@ Merchants who fail to become PCI compliant could be putting their businesses at 
 
 Substantial penalties (fines), fraud and chargebacks, as well as legal cost and customers is the increasing possibility that US businesses, no matter how small, will have foreign suppliers or clients, makes it imperative for them to understand the Office of Foreign Asset Control compliance. Businesses are responsible for following OFAC regulations which are designed to halt terrorist and other unlawful funds circulation. 
     </P>
-             <img alt="" src="../img/FedTreasury.png" class="card-img-bottom float-right pr-5" style="width:50%" > .</p>
+             <img alt="" src="../img/FedTreasurysm.png" class="card-img-bottom float-right pr-5" style="width:50%" > .</p>
   
 </div>
 
