--- a/templates/views/securitycenter.hbs
+++ b/templates/views/securitycenter.hbs
@@ -1,127 +1,19 @@
 <html lang="en">
-<head>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
-    crossorigin="anonymous">
-    <title>Security Info Center</title>
-      
-     <link rel="stylesheet" href="/css/security.css" >       
-    <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">    
-    <meta name="generator" content="HAPedit 3.1">
-
-  <head/>  
-    
-    
-    <!--<style type="text/css">
-    
-                                                    
-                                                                      
-        html, body {
-            margin: 0;
-            padding: 0;
-        }
-
-        body {
-            color: #292929;
-            font: 90% Roboto, Arial, sans-serif;
-            font-weight: 300;
-            background-color: #DCCA98;
-            margin-top:0px
-        }
-
-        p {
-            padding: 0 10px;
-            line-height: 1.8;
-        }
-
-        ul li {
-            padding-right: 10px;
-            line-height: 1.6;
-        }
-
-        h3 {
-            padding: 5px 20px;
-            margin: 0;
-        }
-
-        div#header {
-            position: relative;
-        }
-
-        div#header h1 {
-            height: 80px;
-            line-height: 80px;
-            margin: 0;
-            padding-left: 10px;
-            background: #e0e0e0;
-            color: #292929;
-        }
-
-        div#header a {
-            position: absolute;
-            right: 0;
-            top: 23px;
-            padding: 10px;
-            color: #006;
-        }
-
-        div#navigation {
-            background: #7cb71c;
-        }
-
-        div#navigation li {
-            list-style: circle;
-        }
-
-        div#extra {
-            background: #147FA9;
-        }
-
-        div#footer {
-            background: #42444e;
-            color: #fff;
-        }
-
-        div#footer p {
-            padding: 20px 10px;
-        }
-
-        div#wrapper {
-            float: left;
-            width: 50%;
-            background-color: white;
-        }
-
-        div#navigation {
-            float: right;
-            width: 49.9%;
-        }
-
-        div#extra {
-            clear: both;
-            width: 100%;
-        }
-    </style>-->
-<!--===========================================================================================-->
-
-      <!--  <style>
-           .responsive {
-           width: 100%;
-           height: auto;
-          }
-      </style> -->
-
-</head>
- 
+     
 <body>
+   {{>header}}
+    
+               <title>Security Info Center</title>
+               <link rel="stylesheet" href="/css/security.css" > 
 
-                                                  
-<div id="container">
+                                                    
+<!--<div id="container">
    
     <div id="header">
        <h1>Cyber Security You Should Know</h1>
         <a href="/" target="_blank">Go Back</a>
            
-    </div>
+    </div> -->
 <!--=========================class="responsive" width="600" height="400"===================-->
     <div class="col">
     <div class="mt-3" id="wrapper">
@@ -183,19 +75,7 @@
         </div> 
     
 <!--=============================================flex box 3 ===============================================-->
-<style>
-.flex-container {
-  display: flex;
-  background-color: DodgerBlue;
-}
 
-.flex-container > div {
-  background-color: #f1f1f1;
-  margin: 10px;
-  padding: 20px;
-  font-size: 30px;
-}
-</style>
 
 
 <div class="flex-container d-flex flex-nowrap">
@@ -275,6 +155,8 @@
          <li></h5>Fully understand the offer.</h5></li>
          <li></h5>Get off credit marketing lists.</h5></li>
          <li></h5>Check your credit reports regularly.</h5></li>
+          <li></h5>Don't adopt a pet password.</h5></li>
+          <li></h5>Make your password long and unique.</h5></li>
 
      </ul>
 </div>
