--- a/public/css/compliance.css
+++ b/public/css/compliance.css
@@ -1,15 +1,46 @@
 
 
 body {
-  background: #555;
+  background: lightgray
 }
 
 .content {
-  max-width: 800px;
+  max-width: 1000px;
   margin: auto;
   background: lightskyblue;
   padding: 10px;
 }
 
+.container {
+
+margin-top: 10rem;
+margin-left: auto;
+  margin-right: auto 
+}
+
+.content {
+   
+   text-align: right;
+  
+}
+
+IMG.displayed {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 3em;
+  margin-top: 3em;
+}
+
+  footer {
+
+    columns: #888888;
+    Border-top:1px solid #b4afaf;
+    margin-top:16px;
+    padding: 16p x 0;
+    margin-left: 30;
+    text-align: center;
+  }
 
 
+  
