--- a/templates/views/compliance.hbs
+++ b/templates/views/compliance.hbs
@@ -1,79 +1,30 @@
 <!DOCTYPE html>
-
-<html lang="en">
- <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width", initial-scale=1, shrink-to-fit=no">   
-     <link rel="stylesheet" href="/css/compliance.css"> 
-     <link rel="stylesheet" href="/css/styles.css">  
-  <!--  <script src="../public/js/form.js"></script>
-    <link rel="stylesheet" href="/css/form.css" > -->
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
-    crossorigin="anonymous">
-
-  
- <!-- <meta name="viewport" content="width=device-width, initial-scale=1">-->
-    
-  <!---<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">-->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-
-      
-  <title>Fed Compliance </title>  
-
-</head>
-
 <body>
- <header>
-
-<nav class="navbar fixed-top navbar-expand-xl bg-dark navbar-dark justify-content-end ">
-    <a class="navbar-brand" href="/">Home</a>
-    <a href="/MerchantRegisterForm"> <button class="btn btn-success ml-auto mr-1" >Sign Up</button> </a> 
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse flex-grow-0" id="navbarSupportedContent">
-        <ul class="navbar-nav text-right">
-            <li class="nav-item active">
-                <a class="nav-link" href="/Login">Login</a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="/partners">Partner</a>
-            </li>    
-            <li class="nav-item active">
-                <a class="nav-link" href="/clients">Clients</a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="/help">Help</a>
-            </li>
-            </li>
-        </ul>
-    </div> 
-</nav>
-           
-    <!--+++++++++++++++++++++++++++++++++++++++++++++++++++ Navabar End++++++++++++++++++-->
+  {{>header}}
              
-          
-
-
-
 
 </header>
 
-<!--++++++++++++++++++++++++++++++++++++++++++++++++++++ container ++++++++++++++++++++++++++++++++++-->
-</head>
-<h1><p class="text-center">Complianted PCI (Payment Card or Check Industry) Security Standards</p></h1> 
+<link rel="stylesheet" href="/css/compliance.css"> 
+<title>Fed Compliance </title>  
 
-<div class="content center"> <br>
-    <img alt="" src="../img/FedCompliance.png" class="card-img-top pl-5"  style="width:50%"/>
-  
-  <!--are wider than 800 pixels.</h1>
-  <h1>Resize the browser window to see the effect.</h1>
-  <p>This page is always centered on screens that are wider than 500px. On screens that are less than 
-  500px wide, it will span the whole of the page.</p>-->
-  <p class="text-justify p-3", "text-sm-center" > Data hosting and processing must be meet <b>PCI</b> (Payment Card or Check Industry) Security Standards.
-The PCI Data Security Standard <b>(PCI-DSS)</b> represents a common set of industry tools and measurements to help ensure the safe handling of sensitive information. 
+<!--++++++++++++++++++++++++++++++++++++++++++++++++++++ container ++++++++++++++++++++++++++++++++++-->
+
+
+    
+
+
+<div class="container"
+<div class = "row">
+<div class="col-10">       
+    <h1><p class="text-center">PCI (Payment Card or Check Industry) Security Standards complianced</p></h1> 
+
+
+    <IMG class="displayed" alt="FedCompliance" src="../img/FedCompliance.png"  style="width:40%"/>
+
+ 
+   <p class="text-left bg-white border border-danger m-3"> <b>Data hosting and processing must be meet PCI (Payment Card or Check Industry) Security Standards.
+The PCI Data Security Standard (PCI-DSS) represents a common set of industry tools and measurements to help ensure the safe handling of sensitive information. 
 The PCI DSS was created by the major bank, the credit card, the processor, as a guideline to help businesses implement the necessary hardware, software and other procedures to guard sensitive checks, bank and personal information. There are many aspects to compliance including: management, policies, procedures, network architecture, software design and other critical protective measures.  All organizations who hanle payment are obligated to comply with the PCI DSS. The Compliance be aware is growing problems of fraud losses, mis-represent, loss of consumer confidence, brand & reputation damage, legislature interest.
 
 Our definition of integrity is acting in accordance with our values of honesty and fairness- responsibly, excellently and innovatively wherever we do business. A key element of integrity is compliance, a strict adherence to the law and to our own internal regulations to meet PCI Data security stardard (PCI-DDS). 
@@ -83,9 +34,12 @@ Our PCI-DSS Compliance System is secure and accuracy which divided into three ac
 Merchants who fail to become PCI compliant could be putting their businesses at greater risk from the growing threat of payment processing. Effective, heads up risk management is critical to ensuring compliance with consumer protection laws and regulations. It has gained greater importance in the advent of new technologies, dynamic product innovation, and the ever changing size and speed of transactions in the financial services market. 
 
 Substantial penalties (fines), fraud and chargebacks, as well as legal cost and customers is the increasing possibility that US businesses, no matter how small, will have foreign suppliers or clients, makes it imperative for them to understand the Office of Foreign Asset Control compliance. Businesses are responsible for following OFAC regulations which are designed to halt terrorist and other unlawful funds circulation. 
-    </P>
-             <img alt="" src="../img/FedTreasurysm.png" class="card-img-bottom float-right pr-5" style="width:50%" > .</p>
   
+</b> </p>
+             <img class="displayed" alt="FedTreasury" src="../img/FedTreasurysm.png" style="width:40%" > 
+
+
+ <div class="col-4">     
 </div>
 
 
@@ -103,7 +57,5 @@ Substantial penalties (fines), fraud and chargebacks, as well as legal cost and 
 
 {{>footer}}                     
        
-    </body>  
-
-
+    </body>
 </html>
