--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -1,81 +1,21 @@
 <!DOCTYPE html>
 
 <html lang="en">
- <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width", initial-scale=1, shrink-to-fit=no">   
-    
-  <!-- <link rel="stylesheet" href="/css/styles.css"> -->
-    <script src="../public/js/form.js"></script>
-    <link rel="stylesheet" href="/css/form.css">
+  <body>      
+                              {{>header}}
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
-    crossorigin="anonymous">
-
-  
- <!-- <meta name="viewport" content="width=device-width, initial-scale=1">-->
-    
-  <!---<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">-->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-
-      
-  <title>About</title>  
-
-</head>
-
-<body>
- <header>
-
-<nav class="navbar fixed-top navbar-expand-xl bg-dark navbar-dark justify-content-end ">
-    <a class="navbar-brand" href="/">Home</a>
-    <a href="/MerchantRegisterForm"> <button class="btn btn-success ml-auto mr-1" >Sign Up</button> </a> 
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse flex-grow-0" id="navbarSupportedContent">
-        <ul class="navbar-nav text-right">
-            <li class="nav-item active">
-                <a class="nav-link" href="/Login">Login</a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="/partners">Partner</a>
-            </li>    
-            <li class="nav-item active">
-                <a class="nav-link" href="/clients">Clients</a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="/help">Help</a>
-            </li>
-            </li>
-        </ul>
-    </div> 
-</nav>
-           
-    
-
-
-<!--+++++++++++++++++++++++++++++++++++++++++++++++++++ menu bar++++++++++++++++++-->
-
-    
-           
-          <style>
-              
-
-                   body {
-                       
-                       background-image: url("../img/DSC_9461.png");                     
-                       background-repeat: no-repeat;
-                       background-size: 150% auto;
-                       
-                      
-           </style>
-         
-</header>
+                          <title>About</title>  
+                       <link rel="stylesheet" href="/css/about.css">   
+                       <script src="../public/js/form.js"></script>
+                   <link rel="stylesheet" href="/css/form.css">  
 <!--++++++++++++++++++++++++++++++++++++++++++++++++++++ container ++++++++++++++++++++++++++++++++++++-->
+
+
+
+
      <H1 class ="text text-white mt-5 text-center" >About Us</H1>
 
-     <div class="container-fluid mt-auto ">   
+     <div class="container-fluid ">   
       <div class="row m-5"> 
       <div class="col-xs-6">          
         <div class="card-columns bg-info mt-5 text-white p-3 "> 
