--- a/templates/views/benefits.hbs
+++ b/templates/views/benefits.hbs
@@ -45,18 +45,17 @@ Merchants need to make sure that check drafts are duly authorized and consumers 
                   </li>   
                 </ul>
             </ul>
-                </p>
+                </p> 
   </div> 
 </div>
 <!--+++++++++++++++++++++++++++++++++++++++++++++++ Add two colmuns++++++++++++++++++++++++++++++++++++-->
 
 
- <!-- ================================NESTING column & MEDIA OBJECTS info media==========================-->
-
-    <div class ="row justify-content-center no-gutters"  
-<div class ="col-md-8 p-5" >
-
-        <div class="media mt-5 mr-3 " >
+ <!-- ================================FlexBox NESTING column & MEDIA OBJECTS info media==========================-->
+ <H3><P class="text-center p-5">Marketing Tricks</P>  </H3>
+    <div class ="d-flex flex-wrap row-hl  "  
+<div class =""mr-auto p-4 item-hl" >
+       
             <a class = "pr-3" href="#">
             <img src="../img/entrepreneur.png" class="img-responsive"  width="250" height="180">
             <div class="media-body">
