centerize image IMG

--- a/templates/views/benefits.hbs
+++ b/templates/views/benefits.hbs
@@ -9,17 +9,18 @@
 
 <h1><p class="text-center">Features and Benefits</p></h1> 
 
-<div class="container center">
+<div class="container">
     <div class ="row justify-content-center"  
 <div class ="col-md-8 p-5" >
   
   <div class="content"> <br>
-  <img alt="header" src="../img/Screenshot.png" class="img-responsive"  width="500" height="180" >  
+  <IMG class="displayed"alt="header" src="../img/Screenshot.png"   width="500" height="180" >  
   
   <!--are wider than 800 pixels.</h1>
   <h1>Resize the browser window to see the effect.</h1>
   <p>This page is always centered on screens that are wider than 500px. On screens that are less than 
   500px wide, it will span the whole of the page.</p>-->
+
   <p class="text-justify p-3", "text-sm-center" > The <b>combination of an authorization platform (frontend) and settlement platform (backend)</b> is essential to complete all aspects electronic transaction or physical check processing.
 Authorization platform refers to verification and sending authorization request to customers. 
 Settlement platform refers to the settling of transaction batch(s) in order to distribute funds.
@@ -48,13 +49,15 @@ Merchants need to make sure that check drafts are duly authorized and consumers 
                 </p> 
   </div> 
 </div>
+
 <!--+++++++++++++++++++++++++++++++++++++++++++++++ Add two colmuns++++++++++++++++++++++++++++++++++++-->
 
 
  <!-- ================================FlexBox NESTING column & MEDIA OBJECTS info media==========================-->
  <H3><P class="text-center p-5">Marketing Tricks</P>  </H3>
+    
     <div class ="d-flex flex-wrap row-hl  "  
-<div class =""mr-auto p-4 item-hl" >
+        <div class ="mr-auto p-4 item-hl" >
        
             <a class = "pr-3" href="#">
             <img src="../img/entrepreneur.png" class="img-responsive"  width="250" height="180">
