--- a/public/css/benefits.css
+++ b/public/css/benefits.css
@@ -23,9 +23,13 @@ body {
   margin: 10px;
   padding: 20px;
   font-size: 30px;
+  max-width: 1000;
 }
 
-
+IMG.displayed {
+    display: block;
+    margin-left: auto;
+    margin-right: auto }
 
 footer { 
                
