--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -51,8 +51,11 @@
              <li class="nav-item active">
                 <a class="nav-link" href="/securitycenter">Cyber_Security</a>
              </li>
-             <li class="nav-item active">
+          <!--   <li class="nav-item active">
                 <a class="nav-link" href="/Spare">Spare Page</a>
+             </li> -->
+             <li class="nav-item active">
+                <a class="nav-link" href="/faq">FAQ</a>
              </li>
             </li>
         </ul>
