--- a/templates/views/faq.hbs
+++ b/templates/views/faq.hbs
@@ -31,13 +31,12 @@
       </div>
  </div> -->
 <!-- ========================================= 3 columns stackable colmuns ============================================-->
-   <div class="row">
+   <div class="row">    
      
      
-     
-      <div class="col-sm-12 bg-white p-3" style="border:1px solid #333 bg:yellow">
+      <div class="col-sm-12 bg-white p-3" style="border:1px solid #333 bg:yellow">  <!--full width-->
                  <p>Q&A</p> 
-                 <img class="responsive" width="500" height="300" src="../img/security21.png" >
+                 <img class="responsive" width="500" height="300" src="../img/ePayBanDigitk.png" >
                  <p></p>
  <div id="accordion">
       <div  class="card">
