--- a/templates/views/faq.hbs
+++ b/templates/views/faq.hbs
@@ -372,9 +372,9 @@
  -+++++++++++++++++++++++++++++++++++++++++++ thumbnail ++++++++++++++++++++++++++++++++++++++++++++++++++-->     
       <div class = "container-thumbnail"> 
           <h2><p>Image Gallery</p></h2>  
-  <p>The .thumbnail class can be used to display an image gallery.</p>
-  <p>The .caption class adds proper padding and a dark grey color to text inside thumbnails.</p>
-  <p>Click on the images to enlarge them.</p>
+  <p>1. DigitCheck system is a safe System</p>
+  <p>2. Save your time </p>
+  <p>3. Increase your profit</p>
 
   <div class="row"> 
 
@@ -383,7 +383,7 @@
         <a href="../img/DSC_1059.png" target="_blank">
           <img src="../img/DSC_1059.png" class="img-thumbnail" alt="Lights" style="width:100%">
           <div class="caption">
-            <p>Lorem ipsum donec id elit non mi porta gravida at eget metus.</p>
+            <p>It is simple, Just fill out our online register form.</p>
           </div>
         </a>
       </div>
@@ -393,7 +393,7 @@
         <a href="../img/DSC_birdstree.png" target="_blank">
           <img src="../img/DSC_birdstree.png" class="img-thumbnail"alt="HB" style="width:100%">
           <div class="caption">
-            <p>Lorem ipsum donec id elit non mi porta gravida at eget metus.</p>
+            <p>Sign up as a parter.</p>
           </div>
         </a>
       </div>
@@ -403,7 +403,7 @@
         <a href="../img/DSC_wetland.png" target="_blank">
           <img src="../img/DSC_wetland.png" class="img-thumbnail" alt="HB" style="width:100%">
           <div class="caption">
-            <p>Lorem ipsum donec id elit non mi porta gravida at eget metus.</p>
+            <p>Sign up with us as client.</p>
           </div>
         </a>
       </div>
