--- a/templates/views/faq.hbs
+++ b/templates/views/faq.hbs
@@ -371,7 +371,7 @@
 
  -+++++++++++++++++++++++++++++++++++++++++++ thumbnail ++++++++++++++++++++++++++++++++++++++++++++++++++-->     
       <div class = "container-thumbnail"> 
-          <h2><p>Image Gallery</p></h2>  
+          <h2><p>Benefit of DigitCheck</p></h2>  
   <p>1. DigitCheck system is a safe System</p>
   <p>2. Save your time </p>
   <p>3. Increase your profit</p>
