--- a/templates/views/faq.hbs
+++ b/templates/views/faq.hbs
@@ -393,7 +393,7 @@
         <a href="../img/DSC_birdstree.png" target="_blank">
           <img src="../img/DSC_birdstree.png" class="img-thumbnail"alt="HB" style="width:100%">
           <div class="caption">
-            <p>Sign up as a parter.</p>
+            <p>Sign up as a partner.</p>
           </div>
         </a>
       </div>
@@ -403,7 +403,7 @@
         <a href="../img/DSC_wetland.png" target="_blank">
           <img src="../img/DSC_wetland.png" class="img-thumbnail" alt="HB" style="width:100%">
           <div class="caption">
-            <p>Sign up with us as client.</p>
+            <p>Sign up with us as a client.</p>
           </div>
         </a>
       </div>
