cleared and aligned text

--- a/templates/views/benefits.hbs
+++ b/templates/views/benefits.hbs
@@ -2,7 +2,7 @@
 <html lang="en">
     <body>
  
- {{>header}}>
+ {{>header}}
                    <title> Benefits</title> 
                    <link rel="stylesheet" href="/css/benefits.css"> 
 
@@ -27,9 +27,9 @@ Settlement platform refers to the settling of transaction batch(s) in order to d
 Settlement   includes: funding to the merchant, debt clearing house, chargebacks and retrievals, merchant statements.
 Merchants need to make sure that check drafts are duly authorized and consumers are identified in a commercially reasonable manner.
     </P>
-          <p class="p-3"> 
+          <p> 
               <b>
-                  <H4>The general process for this service is:</H4>
+                  <H4 class="text-center">The general process for this service is:</H4>
               </b> 
             
               <ul class="list-group mb-n5 p-5">
