--- a/templates/views/benefits.hbs
+++ b/templates/views/benefits.hbs
@@ -3,7 +3,7 @@
     <body>
  
                             {{>header}}
-                            
+
                    <title>Benefits</title> 
                    <link rel="stylesheet" href="/css/benefits.css"> 
 
@@ -30,7 +30,7 @@ Merchants need to make sure that check drafts are duly authorized and consumers 
     </P>
           <p> 
               <b>
-                  <H4 class="text-center">The general process for this service is:</H4>
+                  <H4>The general process for this service is:</H4>
               </b> 
             
               <ul class="list-group mb-n5 p-5">
