--- a/templates/views/benefits.hbs
+++ b/templates/views/benefits.hbs
@@ -3,7 +3,7 @@
     <body>
  
                             {{>header}}
-
+                            
                    <title>Benefits</title> 
                    <link rel="stylesheet" href="/css/benefits.css"> 
 
@@ -22,7 +22,7 @@
   <p>This page is always centered on screens that are wider than 500px. On screens that are less than 
   500px wide, it will span the whole of the page.</p>-->
 
-  <p class="text-justify p-3", "text-sm-center" >  The <b>combination of an authorization platform (frontend) and settlement platform (backend)</b> is essential to complete all aspects electronic transaction or physical check processing.
+  <p class="text-justify p-5"  >  The <b>combination of an authorization platform (frontend) and settlement platform (backend)</b> is essential to complete all aspects electronic transaction or physical check processing.
 Authorization platform refers to verification and sending authorization request to customers. 
 Settlement platform refers to the settling of transaction batch(s) in order to distribute funds.
 Settlement   includes: funding to the merchant, debt clearing house, chargebacks and retrievals, merchant statements.
@@ -30,7 +30,7 @@ Merchants need to make sure that check drafts are duly authorized and consumers 
     </P>
           <p> 
               <b>
-                  <H4>The general process for this service is:</H4>
+                  <H4 class="text-center">The general process for this service is:</H4>
               </b> 
             
               <ul class="list-group mb-n5 p-5">
