--- a/templates/views/404.hbs
+++ b/templates/views/404.hbs
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
-
 <html>
-    <head>
-           <Title>404</Title>
-           <link rel="stylesheet" href="/css/styles.css">  
-           
-    </head>
+   <body>
+           <link rel="stylesheet" href="/css/404.css">  
+                      {{>header}}
 
-    <body>
-       <div class="main-content">
+                  <Title>404</Title>
+       
+           <div class="container">
+           <div class="row"
+            <div class="col-12"
+     
+    
         
-           {{>header}}
-        <p>{{errorMessage}}</p>
+         
 
-        </div>
+        <p class="text p-5" >{{errorMessage}}</p>
 
-           {{>footer}}
+                    
+                <h1>Error 404 : Page not found</h1> 
+</div>
 
+        
+
+            
     </body>
 
 </html>
